SERVER-47695: Don't set lastOp for client backwards in terms of timestamp after rollback

(cherry picked from commit bd579c0d3f2583c2af7dcd98c7f6cfc55009b406)
(cherry picked from commit bf3227e11dd689044ff4555c823c682899f41cf9)